[gd_scene load_steps=4 format=3 uid="uid://b0rvmqbtxvwhg"]

[ext_resource type="Script" path="res://scripts/items/laser_gun.gd" id="1_usg4f"]
[ext_resource type="Texture2D" uid="uid://deh8sasl35vni" path="res://textures/items/lasergun.png" id="2_smu1l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ubgq"]
size = Vector2(12, 8)

[node name="laser_gun" type="Area2D"]
script = ExtResource("1_usg4f")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_smu1l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8ubgq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="used" from="." to="." method="_on_used"]
